<resources>
    <string name="app_name">Vino</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_todos">To-Do</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="vineyards">Vineyards</string>
    <string name="vineyard_image">Vineyard image</string>
    <string name="temperature_value">Temperature: %1$d°</string>
    <string name="humidity_value">Humidity: %1$d%%</string>
    <string name="temperature_value_degreee">%1$d°</string>
    <string name="humidity_value_percent">%1$d%%</string>
    <string name="completed_on">Completed on %1$s</string>
    <string name="due_by">Due by %1$s</string>
    <string name="wind_speed">Wind speed %1$d mph</string>
    <string name="feels_like">Feels like %1$d°</string>
    <string name="clouds_percent">Clouds %1$d%%</string>
    <string name="variety">Variety</string>
    <string name="acres">Acres</string>
    <string name="vines">Vines</string>
    <string name="rootstock">Rootstock</string>
    <string name="clone">Clone</string>
    <string name="year_planted">Year Planted</string>
    <string name="row">Row Spacing</string>
    <string name="plant_spacing">Plant Spacing</string>
    <string name="name">Name</string>
    <string name="map_type">Map type</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="map_default">Default</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="rain">Rain</string>
    <string name="current_job">Job: %1$s</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>