<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/name_actual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/plant_space_actual"
        app:layout_constraintTop_toTopOf="@id/name"
        tools:text="Block 1" />

    <TextView
        android:id="@+id/variety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:text="@string/variety"/>

    <TextView
        android:id="@+id/variety_actual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/variety"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/plant_space_actual"
        app:layout_constraintTop_toTopOf="@+id/variety"
        tools:text="Cabernet Sauvignon" />

    <TextView
        android:id="@+id/acres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/variety"
        android:text="@string/acres"/>

    <TextView
        android:id="@+id/acres_actual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/acres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/plant_space_actual"
        app:layout_constraintTop_toTopOf="@id/acres"
        tools:text="12.3" />

    <TextView
        android:id="@+id/vines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acres"
        android:text="@string/vines"/>

    <TextView
        android:id="@+id/vines_actual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/vines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/plant_space_actual"
        app:layout_constraintTop_toTopOf="@id/vines"
        tools:text="1345" />

    <TextView
        android:id="@+id/rootstock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vines"
        android:text="@string/rootstock"/>

    <TextView
        android:id="@+id/rootstock_actual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/rootstock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/plant_space_actual"
        app:layout_constraintTop_toTopOf="@id/rootstock"
        tools:text="110 R" />

    <TextView
        android:id="@+id/clone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rootstock"
        android:text="@string/clone"/>

    <TextView
        android:id="@+id/clone_actual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/clone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/plant_space_actual"
        app:layout_constraintTop_toTopOf="@id/clone"
        tools:text="337" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clone"
        android:text="@string/year_planted"/>

    <TextView
        android:id="@+id/year_actual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/plant_space_actual"
        app:layout_constraintTop_toTopOf="@id/year"
        tools:text="2013" />

    <TextView
        android:id="@+id/row_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year"
        android:text="@string/row"/>

    <TextView
        android:id="@+id/row_space_actual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/row_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/plant_space_actual"
        app:layout_constraintTop_toTopOf="@id/row_space"
        tools:text="7 ft." />

    <TextView
        android:id="@+id/plant_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row_space"
        android:text="@string/plant_spacing"/>

    <TextView
        android:id="@+id/plant_space_actual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/plant_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/plant_space"
        app:layout_constraintTop_toTopOf="@id/plant_space"
        tools:text="5 ft." />

</androidx.constraintlayout.widget.ConstraintLayout>