<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.vino.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_vineyardDetailFragment"
            app:destination="@id/vineyard_detail" />
    </fragment>
    <!-- TODO play with animation -->
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.vino.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_todos"
        android:name="com.example.vino.ui.todos.TodosFragment"
        android:label="@string/title_todos"
        tools:layout="@layout/fragment_todos" />
    <fragment
        android:id="@+id/vineyard_detail"
        android:name="com.example.vino.ui.home.VineyardDetailFragment"
        android:label="fragment_vineyard_detail"
        tools:layout="@layout/fragment_vineyard_detail" >
        <argument
            android:name="vineyardId"
            app:argType="integer" />
        <action
            android:id="@+id/action_vineyardDetailFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_vineyard_detail_to_vineyardMapFragment"
            app:destination="@id/vineyardMapFragment"
            app:enterAnim="@anim/slide_in"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_vineyard_detail_to_leafWaterPotentialFragment"
            app:destination="@id/leafWaterPotentialFragment"
            app:enterAnim="@anim/slide_in"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_vineyard_detail_to_weatherDetailFragment"
            app:destination="@id/weatherDetailFragment"
            app:enterAnim="@anim/slide_in"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left" />

    </fragment>

    <fragment
        android:id="@+id/vineyardMapFragment"
        android:name="com.example.vino.ui.home.VineyardMapFragment"
        android:label="fragment_vineyard_map"
        tools:layout="@layout/fragment_vineyard_map" >
        <action
            android:id="@+id/action_vineyardMapFragment_to_vineyard_detail"
            app:destination="@id/vineyard_detail" />
        <argument
            android:name="vineyardId"
            app:argType="integer" />
        <argument
            android:name="viewTemperature"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/leafWaterPotentialFragment"
        android:name="com.example.vino.ui.home.LeafWaterPotentialFragment"
        android:label="fragment_leaf_water_potential"
        tools:layout="@layout/fragment_leaf_water_potential" >
        <argument
            android:name="vineyardId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/weatherDetailFragment"
        android:name="com.example.vino.ui.home.WeatherDetailFragment"
        android:label="weather_detail_fragment"
        tools:layout="@layout/fragment_weather_detail" >
        <action
            android:id="@+id/action_weatherDetailFragment_to_vineyardMapFragment"
            app:destination="@id/vineyardMapFragment"
            app:enterAnim="@anim/slide_in"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left" />
    </fragment>

</navigation>