<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/map_layer_select_bottom_sheet_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="32dp"
    android:background="@color/white"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:behavior_skipCollapsed="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/map_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/map_type"
        android:textColor="@color/greyDark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/close_map_bottom_sheet"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Close map select"
        android:src="@drawable/ic_round_close_24"
        app:layout_constraintBottom_toBottomOf="@+id/map_type_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/greyText" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/default_map_card_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:contentPadding="4dp"
        app:layout_constraintEnd_toStartOf="@+id/terrain_map_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_type_title">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/default_map_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/mapsample" />

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/terrain_map_card_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/default_map_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/default_map_card_view">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="0dp" >

            <ImageView
                android:id="@+id/terrian_map_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/terrain_map_sample" />

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/satellite_map_card_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/default_map_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/terrain_map_card_view"
        app:layout_constraintTop_toTopOf="@+id/default_map_card_view" >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="0dp" >

            <ImageView
                android:id="@+id/satellite_map_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/satellite_map_sample" />

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/default_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/map_default"
        android:textColor="@color/greyMedium"
        app:layout_constraintEnd_toEndOf="@+id/default_map_card_view"
        app:layout_constraintStart_toStartOf="@+id/default_map_card_view"
        app:layout_constraintTop_toBottomOf="@+id/default_map_card_view" />

    <TextView
        android:id="@+id/terrain_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/terrain"
        android:textColor="@color/greyMedium"
        app:layout_constraintEnd_toEndOf="@+id/terrain_map_card_view"
        app:layout_constraintStart_toStartOf="@+id/terrain_map_card_view"
        app:layout_constraintTop_toBottomOf="@+id/terrain_map_card_view" />

    <TextView
        android:id="@+id/satellite_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/satellite"
        android:textColor="@color/greyMedium"
        app:layout_constraintEnd_toEndOf="@+id/satellite_map_card_view"
        app:layout_constraintStart_toStartOf="@+id/satellite_map_card_view"
        app:layout_constraintTop_toBottomOf="@+id/satellite_map_card_view" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#E3E3E3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terrain_text" />

    <TextView
        android:id="@+id/map_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Map detail"
        android:textColor="@color/greyDark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/temperature_map_card_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:contentPadding="4dp"
        app:layout_constraintEnd_toStartOf="@+id/wind_map_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_detail_title">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/temperature_map_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/temperature_map_sample" />

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/wind_map_card_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/temperature_map_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/temperature_map_card_view">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="0dp" >

            <ImageView
                android:id="@+id/wind_map_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/wind_map_sample" />

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rain_map_card_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/temperature_map_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/wind_map_card_view"
        app:layout_constraintTop_toTopOf="@id/temperature_map_card_view">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="0dp" >

            <ImageView
                android:id="@+id/rain_map_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/rain_map_sample" />

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/temperature_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/temperature"
        android:textColor="@color/greyMedium"
        app:layout_constraintEnd_toEndOf="@+id/temperature_map_card_view"
        app:layout_constraintStart_toStartOf="@+id/temperature_map_card_view"
        app:layout_constraintTop_toBottomOf="@+id/temperature_map_card_view" />

    <TextView
        android:id="@+id/wind_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wind"
        android:textColor="@color/greyMedium"
        app:layout_constraintEnd_toEndOf="@+id/wind_map_card_view"
        app:layout_constraintStart_toStartOf="@+id/wind_map_card_view"
        app:layout_constraintTop_toBottomOf="@+id/wind_map_card_view" />

    <TextView
        android:id="@+id/rain_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rain"
        android:textColor="@color/greyMedium"
        app:layout_constraintEnd_toEndOf="@+id/rain_map_card_view"
        app:layout_constraintStart_toStartOf="@+id/rain_map_card_view"
        app:layout_constraintTop_toBottomOf="@+id/rain_map_card_view" />

</androidx.constraintlayout.widget.ConstraintLayout>